pkgconfig: fix default paths detection on FreeBSD
Change-Id: I3debddf40de1e3b530182665d8ad82612d34b3f9
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/lib/pkgconfig/CMakeLists.txt
+++ b/src/lib/pkgconfig/CMakeLists.txt
@@ -13,10 +13,20 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_
     set(QBS_PKGCONFIG_PUBLIC_DEPENDS "stdc++fs")
 endif()
 
+set(PKG_CONFIG_PC_PATH "${CMAKE_INSTALL_PREFIX}/${QBS_LIBDIR_NAME}/pkgconfig:${CMAKE_INSTALL_PREFIX}/share/pkgconfig")
+
+if (CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
+    set(PKG_CONFIG_PC_PATH "${PKG_CONFIG_PC_PATH}:/usr/local/libdata/pkgconfig/:/usr/libdata/pkgconfig/:/usr/local/share/pkgconfig/")
+elseif (UNIX)
+    set(PKG_CONFIG_PC_PATH "${PKG_CONFIG_PC_PATH}:/usr/lib/pkgconfig/:/usr/share/pkgconfig/")
+endif()
+
+message(${PKG_CONFIG_PC_PATH})
+
 add_qbs_library(qbspkgconfig
     STATIC
     DEFINES
-        "PKG_CONFIG_PC_PATH=\"${CMAKE_INSTALL_PREFIX}/${QBS_LIBDIR_NAME}/pkgconfig:${CMAKE_INSTALL_PREFIX}/share/pkgconfig:/usr/${QBS_LIBDIR_NAME}/pkgconfig/:/usr/share/pkgconfig/\""
+        "PKG_CONFIG_PC_PATH=\"${PKG_CONFIG_PC_PATH}\""
         "PKG_CONFIG_SYSTEM_LIBRARY_PATH=\"/usr/${QBS_LIBDIR_NAME}\""
     PUBLIC_DEFINES
         "QBS_PC_WITH_QT_SUPPORT=1"
