GitHub actions: bump XCode version for iOS-simulator
Change-Id: I8fd2054fa844ed903178c15d16c5daebe7587cce
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -580,6 +580,19 @@ jobs:
             script: './scripts/test-qbs.sh',
           }
         - {
+            name: 'Test iOS-sim (Xcode 16.4, x64)',
+            runner: 'macos-15',
+            target: 'ios',
+            toolchain: 'ios',
+            xcodeVersion: '16.4',
+            # Qt does not support arm64 simulators,
+            # see https://bugreports.qt.io/browse/QTBUG-101276
+            testProfile: 'xcode_16_4-iphonesimulator-x86_64',
+            qtVersion: '6.8.3',
+            suffix: 'macos-arm64',
+            script: './scripts/test-qbs.sh',
+          }
+        - {
             name: 'Test macOS (Xcode 15.1, x64)',
             runner: 'macos-13',
             target: 'desktop',
@@ -600,17 +613,6 @@ jobs:
             qtVersion: '5.15.2',
             suffix: 'macos',
             script: './scripts/test-qt.sh',
-          }
-        - {
-            name: 'Test iOS-sim (Xcode 15.1, x64)',
-            runner: 'macos-13',
-            target: 'ios',
-            toolchain: 'ios',
-            xcodeVersion: '15.1',
-            testProfile: 'xcode_15_1-iphonesimulator-x86_64',
-            qtVersion: '6.8.3',
-            suffix: 'macos',
-            script: './scripts/test-qbs.sh',
           }
         - {
             name: 'Test macOS (Xcode 15.4, arm64)',
