apple: use NSFileManager for copying files
Otherwise, HFS+ attributes are lost when using QFile::copy.
This is required to be able to sign static libraries and
debug variant in the static bundle.

Change-Id: If076bfb8c41154e63acdeadbc3240d164fdf0f8a
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -448,6 +448,7 @@ if(APPLE)
     set(TOOLS_MACOS_SOURCES
         applecodesignutils.cpp
         applecodesignutils.h
+        fileinfo.mm
         )
     list_transform_prepend(TOOLS_MACOS_SOURCES tools/)
     set(EXTERNAL_DEPENDS "-framework Foundation" "-framework Security")
