--- a/src/shared/quickjs/CMakeLists.txt
+++ b/src/shared/quickjs/CMakeLists.txt
@@ -3,6 +3,7 @@ add_qbs_library(qbsquickjs
     SOURCES
         builtin-array-fromasync.h
         cutils.c cutils.h
+        dtoa.c dtoa.h
         libbf.c libbf.h
         libregexp-opcode.h
         libregexp.c libregexp.h
@@ -13,7 +14,6 @@ add_qbs_library(qbsquickjs
         quickjs-c-atomics.h
         quickjs-opcode.h
         quickjs.c quickjs.h
-        xsum.c xsum.h
     DEFINES
         "CONFIG_VERSION=\"2021-03-27\""
 )
